tkg-alexandria/http-ingress/http-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: http-ingress
  namespace: test-ingress
  labels:
    app: hello
spec:
  rules:
  - host: contour.tpmlab.vmware.com
    http:
      paths:
      - path: /foo
        backend:
          serviceName: s1
          servicePort: 80
      - path: /bar
        backend:
          serviceName: s2
          servicePort: 80
